--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "knex": "^0.16.3",
     "nodemon": "^1.18.10",
     "pg": "^7.8.0",
     "react": "^16.8.2",
